style: fix loader alignment on verify phone number screen

--- a/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
+++ b/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
@@ -215,7 +215,6 @@
       &_isSubmitted {
         display: flex;
         justify-content: center;
-        margin: 30px 0px 40px 0px;
       }
     }
 
